--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "start": "nodemon --experimental-modules src/index.js --watch"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "websocket": "^1.0.34",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "ws-multipath": "^0.1.0"
   }
 }
